libs/parser/testdata/fixtures/negative/invalid_key_character.csl
section:
	key1: value1
	@invalid: value2
